# ResPredAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cm.py  dev-requirements.txt  main.py  mkdocs.yml  params.py  pipe.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yaml  docs.yaml
docs/: changelog.md  conf.py  contributing.md  contributing.rst  create-config-command.md  evaluate-command.md  feature-importance-command.md  index.md  index.rst  run-command.md  validate-config-command.md
docs/cli-reference/: create-config-command.rst  evaluate-command.rst  feature-importance-command.md  feature-importance-command.rst  index.md  index.rst  run-command.md  run-command.rst  train-command.md  train-command.rst  validate-config-command.md  validate-config-command.rst
docs/getting-started/: installation.md  installation.rst  quickstart.md  quickstart.rst
example/: config_example.ini  config_example_imputation.ini  data_example.csv  data_example_missing.csv
respredai/: __init__.py  cli.py  cm.py  feature_importance.py  main.py  params.py  pipe.py  utils.py
respredai/core/: __init__.py  calibration.py  cv_utils.py  metrics.py  pipeline.py  workflow.py
respredai/io/: config.py  reproducibility.py
respredai/visualization/: feature_importance.py  html_report.py  reliability_curves.py
tests/: __init__.py  test_calibration.py  test_cli.py  test_confighandler.py  test_cv_utils.py  test_datasetter.py  test_main.py  test_model_builder.py  test_pipeline_integration.py  test_preprocessing.py
